@@ -6,10 +6,13 @@
 package org.opensearch.agent;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.function.Supplier;
 
+import org.opensearch.agent.indices.IndicesHelper;
+import org.opensearch.agent.job.IndexSummaryEmbeddingJob;
+import org.opensearch.agent.job.MLClients;
+import org.opensearch.agent.job.SkillsClusterManagerEventListener;
 import org.opensearch.agent.tools.NeuralSparseSearchTool;
 import org.opensearch.agent.tools.PPLTool;
 import org.opensearch.agent.tools.RAGTool;
@@ -23,13 +26,17 @@ import org.opensearch.agent.tools.VisualizationsTool;
 import org.opensearch.client.Client;
 import org.opensearch.cluster.metadata.IndexNameExpressionResolver;
 import org.opensearch.cluster.service.ClusterService;
+import org.opensearch.common.settings.Setting;
+import org.opensearch.common.settings.Settings;
 import org.opensearch.core.common.io.stream.NamedWriteableRegistry;
 import org.opensearch.core.xcontent.NamedXContentRegistry;
 import org.opensearch.env.Environment;
 import org.opensearch.env.NodeEnvironment;
+import org.opensearch.indices.SystemIndexDescriptor;
 import org.opensearch.ml.common.spi.MLCommonsExtension;
 import org.opensearch.ml.common.spi.tools.Tool;
 import org.opensearch.plugins.Plugin;
+import org.opensearch.plugins.SystemIndexPlugin;
 import org.opensearch.repositories.RepositoriesService;
 import org.opensearch.script.ScriptService;
 import org.opensearch.threadpool.ThreadPool;
@@ -37,11 +44,13 @@ import org.opensearch.watcher.ResourceWatcherService;
 
 import lombok.SneakyThrows;
 
-public class ToolPlugin extends Plugin implements MLCommonsExtension {
+public class ToolPlugin extends Plugin implements MLCommonsExtension, SystemIndexPlugin {
 
     private Client client;
     private ClusterService clusterService;
     private NamedXContentRegistry xContentRegistry;
+    private IndicesHelper indicesHelper;
+    private MLClients mlClients;
 
     @SneakyThrows
     @Override
@@ -62,6 +71,18 @@ public class ToolPlugin extends Plugin implements MLCommonsExtension {
         this.clusterService = clusterService;
         this.xContentRegistry = xContentRegistry;
 
+        mlClients = new MLClients(client);
+        indicesHelper = new IndicesHelper(clusterService, client, mlClients);
+        SkillsClusterManagerEventListener clusterManagerEventListener = new SkillsClusterManagerEventListener(
+            clusterService,
+            client,
+            environment.settings(),
+            threadPool,
+            xContentRegistry,
+            indicesHelper,
+            mlClients
+        );
+
         PPLTool.Factory.getInstance().init(client);
         VisualizationsTool.Factory.getInstance().init(client);
         NeuralSparseSearchTool.Factory.getInstance().init(client, xContentRegistry);
@@ -72,7 +93,8 @@ public class ToolPlugin extends Plugin implements MLCommonsExtension {
         SearchAnomalyDetectorsTool.Factory.getInstance().init(client);
         SearchAnomalyResultsTool.Factory.getInstance().init(client);
         SearchMonitorsTool.Factory.getInstance().init(client);
-        return Collections.emptyList();
+
+        return List.of(clusterManagerEventListener);
     }
 
     @Override
@@ -89,6 +111,26 @@ public class ToolPlugin extends Plugin implements MLCommonsExtension {
                 SearchAnomalyDetectorsTool.Factory.getInstance(),
                 SearchAnomalyResultsTool.Factory.getInstance(),
                 SearchMonitorsTool.Factory.getInstance()
+            );
+    }
+
+    @Override
+    public List<Setting<?>> getSettings() {
+        return List
+            .of(
+                SkillsClusterManagerEventListener.SKILLS_INDEX_SUMMARY_JOB_INTERVAL,
+                SkillsClusterManagerEventListener.SKILLS_INDEX_SUMMARY_JOB_ENABLED
+            );
+    }
+
+    @Override
+    public Collection<SystemIndexDescriptor> getSystemIndexDescriptors(Settings settings) {
+        return List
+            .of(
+                new SystemIndexDescriptor(
+                    IndexSummaryEmbeddingJob.INDEX_SUMMARY_EMBEDDING_INDEX,
+                    "System index for storing index meta and simple data embedding"
+                )
             );
     }
 }
